sna: Scale cpp by 8 for bit depth

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=111916
Fixes: 1804eacc85da ("sna: Add sna_br13_color_depth()")
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>